; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_sh.c_movl_reg_rdisp.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_sh.c_movl_reg_rdisp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32*, i32 }

@R_ANAL_OP_TYPE_STORE = common dso_local global i32 0, align 4
@LONG_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"r%d,r%d,0x%x,+,=[4]\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__*, i32)* @movl_reg_rdisp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @movl_reg_rdisp(i32* %0, %struct.TYPE_3__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @R_ANAL_OP_TYPE_STORE, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 4
  store i32 %7, i32* %9, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @GET_SOURCE_REG(i32 %11)
  %13 = call i32 @anal_fill_ai_rg(i32* %10, i32 %12)
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 3
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  store i32 %13, i32* %17, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @GET_TARGET_REG(i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %21, 15
  %23 = load i32, i32* @LONG_SIZE, align 4
  %24 = call i32 @anal_fill_reg_disp_mem(i32* %18, i32 %20, i32 %22, i32 %23)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 2
  store i32 %24, i32* %26, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @GET_SOURCE_REG(i32 %29)
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @GET_TARGET_REG(i32 %31)
  %33 = load i32, i32* %6, align 4
  %34 = and i32 %33, 15
  %35 = shl i32 %34, 2
  %36 = call i32 @r_strbuf_setf(i32* %28, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %30, i32 %32, i32 %35)
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  ret i32 %39
}

declare dso_local i32 @anal_fill_ai_rg(i32*, i32) #1

declare dso_local i32 @GET_SOURCE_REG(i32) #1

declare dso_local i32 @anal_fill_reg_disp_mem(i32*, i32, i32, i32) #1

declare dso_local i32 @GET_TARGET_REG(i32) #1

declare dso_local i32 @r_strbuf_setf(i32*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
